--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scss And TypeScript | Project 1</title>
+    <title>Github Users Finder | Developed by Istiak Rahman</title>
     <link rel="stylesheet" href="./style/css/style.css" />
     <link
       rel="stylesheet"
@@ -12,9 +12,7 @@
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
   </head>
   <body>
-    <h1 id="title" class="fade-in-slow">
-      Github Users Finder | Developed by Istiak Rahman
-    </h1>
+    <h1 id="title" class="fade-in-slow">Github Users</h1>
     <p id="sub-title" class="slide-in-right">
       Find and explore GitHub profiles easily
     </p>
